# simple_spotify

./: .gitignore  LICENSE  README.md  consts.py  entry_points.cfg  error.py  objects.py  setup.cfg  simple_spotify.py
example/notebook/: Simple-Spotify Track Feature Visualize Sample.ipynb  requirements.txt
example/scripts/: get_artist_albums.py  requirements.txt  settings.py
example/webapp/: requirement.txt
example/webapp/app/: app.py
example/webapp/app/templates/: index.html
simple_spotify/: __init__.py  api.py  authcode-fetcher.py  authcode_fetcher.py  authorization.py  authorize.py  code_fetcher.py  consts.py  decorators.py  errors.py  models.py  sp_auth.py  user_token_cli.py  util.py
