[metadata]
name = simple_spotify
version = attr: simple_spotify.__version__
author = Naotaka Yokoyama
author_email = solaris2501.fe2@gmail.com
description = Pure Python Spotify Web API wrapper library
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/NaoY-2501/simple_spotify
license = MIT
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
entry_points = file: entry_points.cfg

